Added the complete pipeline

--- a/emp_bayes_updated.ipynb
+++ b/emp_bayes_updated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,18 +485,30 @@
     "\n",
     "        # Define denoisers per modality\n",
     "        for modality_idx, cluster in enumerate(self.cluster_labels):\n",
+    "            start_col = sum(\n",
+    "                self.data_matrices[i].shape[1] for i in range(modality_idx) if self.cluster_labels[i] == cluster\n",
+    "            )\n",
+    "            end_col = start_col + self.data_matrices[modality_idx].shape[1]\n",
+    "\n",
     "            nonpar_eb = cluster_denoisers[cluster]  # Use cluster-specific prior\n",
     "\n",
-    "            def create_denoise_func(nonpar_eb):\n",
-    "                return lambda f, mu, cov: nonpar_eb.denoise(f, mu, cov)\n",
+    "            def create_denoise_func(nonpar_eb, start_col, end_col):\n",
+    "                def denoise_func(f, mu, cov):\n",
+    "                    denoised_cluster = nonpar_eb.denoise(f, mu, cov)\n",
+    "                    return denoised_cluster[:, start_col:end_col]\n",
+    "                return denoise_func\n",
     "\n",
-    "            def create_ddenoise_func(nonpar_eb):\n",
-    "                return lambda f, mu, cov: nonpar_eb.ddenoise(f, mu, cov)\n",
-    "\n",
-    "            self.modality_denoisers[modality_idx] = (\n",
-    "                create_denoise_func(nonpar_eb),\n",
-    "                create_ddenoise_func(nonpar_eb),\n",
-    "            )\n",
+    "            def create_ddenoise_func(nonpar_eb, start_col, end_col):\n",
+    "                def ddenoise_func(f, mu, cov):\n",
+    "                    ddenoised_cluster = nonpar_eb.ddenoise(f, mu, cov)\n",
+    "                    return ddenoised_cluster[:, start_col:end_col, start_col:end_col]\n",
+    "                return ddenoise_func\n",
+    "            \n",
+    "            # Store the denoisers with explicit names\n",
+    "            self.modality_denoisers[modality_idx] = {\n",
+    "                \"denoise\": create_denoise_func(nonpar_eb, start_col, end_col),\n",
+    "                \"ddenoise\": create_ddenoise_func(nonpar_eb, start_col, end_col),\n",
+    "            }\n",
     "\n",
     "        return self.cluster_priors, self.modality_denoisers\n",
     "\n",
@@ -545,7 +557,7 @@
     "\n",
     "    # Ensure each cluster has at least one modality\n",
     "    unique_clusters = np.unique(cluster_labels)\n",
-    "    \n",
+    "\n",
     "    # Compute the minimum r_c for each cluster\n",
     "    cluster_min_dims = {c: min(modality_dims[cluster_labels == c]) for c in unique_clusters}\n",
     "\n",
@@ -591,19 +603,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'unique_clusters' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Generate synthetic data with cluster-correlated modalities\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m data_matrices, M_matrices, S_matrices, cluster_labels \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_synthetic_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_modalities\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_clusters\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mseed\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Print cluster assignments\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCluster Labels:\u001b[39m\u001b[38;5;124m\"\u001b[39m, cluster_labels)\n",
-      "Cell \u001b[0;32mIn[4], line 539\u001b[0m, in \u001b[0;36mgenerate_synthetic_data\u001b[0;34m(num_modalities, num_clusters, n, r_range, noise_scale, seed)\u001b[0m\n\u001b[1;32m    536\u001b[0m modality_dims \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandint(r_range[\u001b[38;5;241m0\u001b[39m], r_range[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, size\u001b[38;5;241m=\u001b[39mnum_modalities)\n\u001b[1;32m    538\u001b[0m \u001b[38;5;66;03m# Compute the minimum r_c for each cluster\u001b[39;00m\n\u001b[0;32m--> 539\u001b[0m cluster_min_dims \u001b[38;5;241m=\u001b[39m {c: \u001b[38;5;28mmin\u001b[39m(modality_dims[cluster_labels \u001b[38;5;241m==\u001b[39m c]) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[43munique_clusters\u001b[49m}\n\u001b[1;32m    541\u001b[0m \u001b[38;5;66;03m# Generate shared cluster-wise latent variables U_c\u001b[39;00m\n\u001b[1;32m    542\u001b[0m cluster_latents \u001b[38;5;241m=\u001b[39m {c: np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandn(n, cluster_min_dims[c])\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat64) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m unique_clusters}\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'unique_clusters' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster Labels: [1 1 0 0 1 0]\n"
      ]
     }
    ],
@@ -613,6 +620,259 @@
     "\n",
     "# Print cluster assignments\n",
     "print(\"Cluster Labels:\", cluster_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ceb = ClusterEmpiricalBayes(data_matrices, M_matrices, S_matrices, cluster_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_priors, modality_denoisers = ceb.estimate_cluster_priors()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_denoise_func.<locals>.denoise_func(f, mu, cov)>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ceb.modality_denoisers[1]['denoise']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: (<function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_denoise_func.<locals>.denoise_func(f, mu, cov)>,\n",
+       "  <function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_ddenoise_func.<locals>.ddenoise_func(f, mu, cov)>),\n",
+       " 1: (<function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_denoise_func.<locals>.denoise_func(f, mu, cov)>,\n",
+       "  <function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_ddenoise_func.<locals>.ddenoise_func(f, mu, cov)>),\n",
+       " 2: (<function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_denoise_func.<locals>.denoise_func(f, mu, cov)>,\n",
+       "  <function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_ddenoise_func.<locals>.ddenoise_func(f, mu, cov)>),\n",
+       " 3: (<function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_denoise_func.<locals>.denoise_func(f, mu, cov)>,\n",
+       "  <function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_ddenoise_func.<locals>.ddenoise_func(f, mu, cov)>),\n",
+       " 4: (<function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_denoise_func.<locals>.denoise_func(f, mu, cov)>,\n",
+       "  <function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_ddenoise_func.<locals>.ddenoise_func(f, mu, cov)>),\n",
+       " 5: (<function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_denoise_func.<locals>.denoise_func(f, mu, cov)>,\n",
+       "  <function __main__.ClusterEmpiricalBayes.estimate_cluster_priors.<locals>.create_ddenoise_func.<locals>.ddenoise_func(f, mu, cov)>)}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modality_denoisers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 1:\n",
+      "  - Support Points Shape: (50, 10)\n",
+      "  - Prior Weights Shape: (50,)\n",
+      "Cluster 0:\n",
+      "  - Support Points Shape: (50, 13)\n",
+      "  - Prior Weights Shape: (50,)\n",
+      "Modality 0 has a denoiser and derivative function.\n",
+      "Modality 1 has a denoiser and derivative function.\n",
+      "Modality 2 has a denoiser and derivative function.\n",
+      "Modality 3 has a denoiser and derivative function.\n",
+      "Modality 4 has a denoiser and derivative function.\n",
+      "Modality 5 has a denoiser and derivative function.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cluster_idx, (support_points, prior_weights) in cluster_priors.items():\n",
+    "    print(f\"Cluster {cluster_idx}:\")\n",
+    "    print(f\"  - Support Points Shape: {support_points.shape}\")\n",
+    "    print(f\"  - Prior Weights Shape: {prior_weights.shape}\")\n",
+    "\n",
+    "for modality_idx, (denoise_func, ddenoise_func) in modality_denoisers.items():\n",
+    "    print(f\"Modality {modality_idx} has a denoiser and derivative function.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cluster Prior Information:\n",
+      "\n",
+      "Cluster 1:\n",
+      "  - Support Points Shape: (50, 10)\n",
+      "  - Prior Weights Shape: (50,)\n",
+      "Cluster 0:\n",
+      "  - Support Points Shape: (50, 13)\n",
+      "  - Prior Weights Shape: (50,)\n",
+      "\n",
+      "Applying Modality-Specific Denoisers:\n",
+      "\n",
+      "Modality 0 (Cluster 1):\n",
+      "  - Denoised Values Shape: (100, 4) (Expected: (100, 4))\n",
+      "  - Denoiser Derivative Shape: (100, 4, 4)\n",
+      "Modality 1 (Cluster 1):\n",
+      "  - Denoised Values Shape: (100, 3) (Expected: (100, 3))\n",
+      "  - Denoiser Derivative Shape: (100, 3, 3)\n",
+      "Modality 2 (Cluster 0):\n",
+      "  - Denoised Values Shape: (100, 4) (Expected: (100, 4))\n",
+      "  - Denoiser Derivative Shape: (100, 4, 4)\n",
+      "Modality 3 (Cluster 0):\n",
+      "  - Denoised Values Shape: (100, 5) (Expected: (100, 5))\n",
+      "  - Denoiser Derivative Shape: (100, 5, 5)\n",
+      "Modality 4 (Cluster 1):\n",
+      "  - Denoised Values Shape: (100, 3) (Expected: (100, 3))\n",
+      "  - Denoiser Derivative Shape: (100, 3, 3)\n",
+      "Modality 5 (Cluster 0):\n",
+      "  - Denoised Values Shape: (100, 4) (Expected: (100, 4))\n",
+      "  - Denoiser Derivative Shape: (100, 4, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nCluster Prior Information:\\n\")\n",
+    "for cluster_idx in ceb.cluster_priors:\n",
+    "    support_points, prior_weights = ceb.cluster_priors[cluster_idx]\n",
+    "    \n",
+    "    print(f\"Cluster {cluster_idx}:\")\n",
+    "    print(f\"  - Support Points Shape: {support_points.shape}\")\n",
+    "    print(f\"  - Prior Weights Shape: {prior_weights.shape}\")\n",
+    "\n",
+    "print(\"\\nApplying Modality-Specific Denoisers:\\n\")\n",
+    "\n",
+    "for modality_idx, (denoise_func, ddenoise_func) in ceb.modality_denoisers.items():\n",
+    "    cluster_idx = cluster_labels[modality_idx]  # Find cluster of this modality\n",
+    "    X_cluster = ceb.cluster_data[cluster_idx]  # Get aggregated cluster data\n",
+    "    M_cluster = ceb.cluster_M[cluster_idx]  # Get aggregated M matrix\n",
+    "    S_cluster = ceb.cluster_S[cluster_idx]  # Get aggregated S matrix\n",
+    "\n",
+    "    # Compute correct start and end column indices inside cluster-level aggregated data\n",
+    "    modality_cols = [m.shape[1] for m, c in zip(ceb.data_matrices, ceb.cluster_labels) if c == cluster_idx]\n",
+    "    start_col = sum(modality_cols[:modality_idx - sum(1 for c in ceb.cluster_labels[:modality_idx] if c != cluster_idx)])\n",
+    "    end_col = start_col + ceb.data_matrices[modality_idx].shape[1]\n",
+    "\n",
+    "    # Apply denoiser\n",
+    "    denoised_values = denoise_func(X_cluster, M_cluster, S_cluster)\n",
+    "    denoiser_derivative = ddenoise_func(X_cluster, M_cluster, S_cluster)\n",
+    "\n",
+    "    # Extract only the relevant modality's part from the cluster-level denoised data\n",
+    "    denoised_values = denoised_values\n",
+    "    denoiser_derivative = denoiser_derivative\n",
+    "\n",
+    "    print(f\"Modality {modality_idx} (Cluster {cluster_idx}):\")\n",
+    "    print(f\"  - Denoised Values Shape: {denoised_values.shape} (Expected: {data_matrices[modality_idx].shape})\")\n",
+    "    print(f\"  - Denoiser Derivative Shape: {denoiser_derivative.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[1.32532211, 0.        , 0.        , 0.        ],\n",
+       "        [0.        , 0.93423801, 0.        , 0.        ],\n",
+       "        [0.        , 0.        , 0.65683869, 0.        ],\n",
+       "        [0.        , 0.        , 0.        , 0.9773599 ]]),\n",
+       " array([[0.95958691, 0.        , 0.        ],\n",
+       "        [0.        , 0.81734248, 0.        ],\n",
+       "        [0.        , 0.        , 0.95367312]]),\n",
+       " array([[0.54942317, 0.        , 0.        , 0.        ],\n",
+       "        [0.        , 0.54736408, 0.        , 0.        ],\n",
+       "        [0.        , 0.        , 0.60039336, 0.        ],\n",
+       "        [0.        , 0.        , 0.        , 0.648547  ]]),\n",
+       " array([[0.66563768, 0.        , 0.        , 0.        , 0.        ],\n",
+       "        [0.        , 0.59104224, 0.        , 0.        , 0.        ],\n",
+       "        [0.        , 0.        , 1.02194354, 0.        , 0.        ],\n",
+       "        [0.        , 0.        , 0.        , 1.34183127, 0.        ],\n",
+       "        [0.        , 0.        , 0.        , 0.        , 0.8422337 ]]),\n",
+       " array([[0.93055226, 0.        , 0.        ],\n",
+       "        [0.        , 1.00351052, 0.        ],\n",
+       "        [0.        , 0.        , 0.77241906]]),\n",
+       " array([[0.83352205, 0.        , 0.        , 0.        ],\n",
+       "        [0.        , 1.10111052, 0.        , 0.        ],\n",
+       "        [0.        , 0.        , 1.21736229, 0.        ],\n",
+       "        [0.        , 0.        , 0.        , 0.97506229]])]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M_matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dimensions of all data matrices:\n",
+      "Modality 0: (100, 4)\n",
+      "Modality 1: (100, 3)\n",
+      "Modality 2: (100, 4)\n",
+      "Modality 3: (100, 5)\n",
+      "Modality 4: (100, 3)\n",
+      "Modality 5: (100, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nDimensions of all data matrices:\")\n",
+    "for idx, X in enumerate(data_matrices):\n",
+    "    print(f\"Modality {idx}: {X.shape}\")"
    ]
   },
   {
