Added the complete pipeline

--- a/test_amp.ipynb
+++ b/test_amp.ipynb
@@ -2,23 +2,265 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import scipy as sp\n",
+    "import matplotlib as plt\n",
+    "import importlib\n",
     "\n",
-    "from amp import ebamp_multimodal\n",
-    "from pca_pack import MultiModalityPCA\n",
-    "from preprocessing import MultiModalityPCADiagnostics\n",
-    "from emp_bayes import ClusterEmpiricalBayes\n",
-    "from hier"
+    "# Dynamically import modules\n",
+    "amp = importlib.import_module(\"amp\")\n",
+    "pca_pack = importlib.import_module(\"pca_pack\")\n",
+    "preprocessing = importlib.import_module(\"preprocessing\")\n",
+    "emp_bayes = importlib.import_module(\"emp_bayes\")\n",
+    "hierarchical = importlib.import_module(\"hierarchical_clustering_modalities\")\n",
+    "pipeline = importlib.import_module(\"complete_pipeline\")\n",
+    "\n",
+    "# Reload to reflect any changes made without restarting kernel\n",
+    "importlib.reload(amp)\n",
+    "importlib.reload(pca_pack)\n",
+    "importlib.reload(preprocessing)\n",
+    "importlib.reload(emp_bayes)\n",
+    "importlib.reload(hierarchical)\n",
+    "importlib.reload(pipeline)\n",
+    "\n",
+    "# Now access objects from reloaded modules\n",
+    "ebamp_multimodal = amp.ebamp_multimodal\n",
+    "MultiModalityPCA = pca_pack.MultiModalityPCA\n",
+    "MultiModalityPCADiagnostics = preprocessing.MultiModalityPCADiagnostics\n",
+    "ClusterEmpiricalBayes = emp_bayes.ClusterEmpiricalBayes\n",
+    "ModalityClusterer = hierarchical.ModalityClusterer\n",
+    "MultimodalPCAPipeline = pipeline.MultimodalPCAPipeline\n",
+    "MultimodalPCAPipelineClustering = pipeline.MultimodalPCAPipelineClustering"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_rademacher(shape):\n",
+    "    return np.random.choice([-1, 1], size=shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set random seed for reproducibility\n",
+    "np.random.seed(22)\n",
+    "\n",
+    "# Dimensions\n",
+    "n = 5000\n",
+    "p1, p2, p3 = 3000, 2000, 2500\n",
+    "r1, r2, r3 = 4, 5, 3\n",
+    "\n",
+    "U1 = generate_rademacher((n, r1))\n",
+    "\n",
+    "# --- U2: shares first 4 cols with U1, last col is i.i.d N(0,1) ---\n",
+    "U2 = np.hstack([U1[:, :r1], generate_rademacher((n, 1))])\n",
+    "\n",
+    "# --- U3: i.i.d N(0,1) entries ---\n",
+    "U3 = generate_rademacher((n, r3))\n",
+    "\n",
+    "# --- Generate V_k matrices with Rademacher entries ---\n",
+    "\n",
+    "V1 = generate_rademacher((p1, r1))\n",
+    "V2 = generate_rademacher((p2, r2))\n",
+    "V3 = generate_rademacher((p3, r3))\n",
+    "\n",
+    "# --- Create diagonal matrices D_k with 3 * k entries ---\n",
+    "D1 = np.diag([5 * (i+1) for i in range(r1)])\n",
+    "D2 = np.diag([5 * (i+1) for i in range(r2)])\n",
+    "D3 = np.diag([5 * (i+1) for i in range(r3)])\n",
+    "\n",
+    "# --- Generate noise matrices Z_k ~ N(0, 1/n) ---\n",
+    "Z1 = np.random.randn(n, p1) / np.sqrt(n)\n",
+    "Z2 = np.random.randn(n, p2) / np.sqrt(n)\n",
+    "Z3 = np.random.randn(n, p3) / np.sqrt(n)\n",
+    "\n",
+    "# --- Compute X_k = (1/n) * U_k D_k V_k^T + Z_k ---\n",
+    "X1 = (1/n) * U1 @ D1 @ V1.T + Z1\n",
+    "X2 = (1/n) * U2 @ D2 @ V2.T + Z2\n",
+    "X3 = (1/n) * U3 @ D3 @ V3.T + Z3\n",
+    "\n",
+    "# --- Output list of modalities ---\n",
+    "X_list = [X1, X2, X3]\n",
+    "K_list = [r1, r2, r3]\n",
+    "cluster_labels_U = np.array([0, 0, 1])  # U1 and U2 are same cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Step 2: PCA ===\n",
+      "Running PCA for Modality 0: Shape (5000, 3000), K=4\n",
+      "Estimated s: [19.98789921 14.99769314  9.99082197  4.98339411]\n",
+      "Running PCA for Modality 1: Shape (5000, 2000), K=5\n",
+      "Estimated s: [25.04140519 19.98062568 14.99162476  9.95746296  4.98143185]\n",
+      "Running PCA for Modality 2: Shape (5000, 2500), K=3\n",
+      "Estimated s: [15.01982604 10.01436914  5.01352604]\n",
+      "\n",
+      "=== Step 3: Clustering Modalities via U ===\n",
+      "Similarity Matrix (HSS):\n",
+      " [[ 0.99597544  0.67671812 -0.00225925]\n",
+      " [ 0.67671812  0.98923884  0.00236035]\n",
+      " [-0.00225925  0.00236035  0.998059  ]]\n",
+      "Cluster Labels for U: [1 1 2]\n",
+      "\n",
+      "=== Step 4: Constructing Empirical Bayes Models ===\n",
+      "\n",
+      "=== Step 5: Running AMP ===\n",
+      "\n",
+      "--- AMP Iteration 1 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=29.1485, mu_v=9.7232, sigma_u=2.3302, sigma_v=0.7996\n",
+      "  Modality 1: mu_u=25.6823, mu_v=15.1232, sigma_u=1.7533, sigma_v=0.9982\n",
+      "  Modality 2: mu_u=14.8464, mu_v=30.5865, sigma_u=1.4788, sigma_v=3.0765\n",
+      "\n",
+      "--- AMP Iteration 2 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0639, mu_v=1.3351, sigma_u=0.0047, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.3679, mu_v=0.1823, sigma_u=0.0240, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8251, mu_v=30.6018, sigma_u=1.4749, sigma_v=3.0789\n",
+      "\n",
+      "--- AMP Iteration 3 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8247, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 4 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 5 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 6 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 7 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 8 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 9 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 10 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 11 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 12 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 13 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 14 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "--- AMP Iteration 15 ---\n",
+      "Sum of entries per modality (mu_u, mu_v, sigma_u, sigma_v):\n",
+      "  Modality 0: mu_u=0.0026, mu_v=1.3351, sigma_u=0.0003, sigma_v=0.1294\n",
+      "  Modality 1: mu_u=0.1800, mu_v=0.1823, sigma_u=0.0119, sigma_v=0.0414\n",
+      "  Modality 2: mu_u=14.8246, mu_v=30.6022, sigma_u=1.4748, sigma_v=3.0790\n",
+      "\n",
+      "=== Denoising Complete! ===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run clustering-aware multimodal PCA pipeline\n",
+    "pipeline = MultimodalPCAPipelineClustering()\n",
+    "\n",
+    "amp_results = pipeline.denoise_amp(\n",
+    "    X_list=X_list,\n",
+    "    K_list=K_list,\n",
+    "    compute_clusters=True,       # Set to False if passing cluster_labels_U\n",
+    "    num_clusters=2,              # Change as needed\n",
+    "    threshold=None,              # Optional: used if doing threshold-based clustering\n",
+    "    amp_iters=15,\n",
+    "    muteu=False,\n",
+    "    mutev=False,\n",
+    "    preprocess=False             # Set True if preprocessing needed\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "hierarchical_amp",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
